--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
             <h2>Come giocare:</h2>
             <ul>
                 <li>Premi <strong>SALTA</strong> per saltare gli ostacoli</li>
-                <li>Evita gli ostacoli rossi</li>
+                <li>Evita gli oggetti rossi per non perdere una vita</li>
                 <li>Raccogli la sposa per 10 punti bonus!</li>
-                <li>Più a lungo sopravvivi, più diventa difficile</li>
+                <li>Hai 3 vite a disposizione</li>
+                <li>La velocità aumenta gradualmente con il punteggio</li>
+                <li>Versione mobile: gioco più veloce e reattivo!</li>
             </ul>
             <div class="obstacle-preview">
                 <div class="obstacle-item">
