--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
         <div class="instructions">
             <h2>Come giocare:</h2>
             <ul>
-                <li>Premi <strong>SALTA</strong> per saltare gli ostacoli</li>
-                <li>Evita gli oggetti rossi per non perdere una vita</li>
-                <li>Raccogli la sposa per 10 punti bonus!</li>
-                <li>Hai 3 vite a disposizione</li>
-                <li>La velocità aumenta gradualmente con il punteggio</li>
-                <li>Versione mobile: gioco più veloce e reattivo!</li>
+                <li>Premi <strong>SALTA</strong> per saltare</li>
+                <li>Evita i rossi</li>
+                <li>Prendi la sposa per 10 punti</li>
+                <li>3 vite a disposizione</li>
             </ul>
             <div class="obstacle-preview">
                 <div class="obstacle-item">
