--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                     <p>+10 punti se la prendi</p>
                 </div>
             </div>
-            <button id="enable-audio" class="audio-btn">🔊 ABILITA AUDIO</button>
-            <button id="start-btn" class="hidden">AVVIA GIOCO</button>
+            <button id="start-btn">AVVIA GIOCO</button>
         </div>
     </div>
 
